--- a/ShoppingCart/ShoppingCart.csproj
+++ b/ShoppingCart/ShoppingCart.csproj
@@ -45,6 +45,8 @@
     <Compile Include="PriceCalculator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShopItem.cs" />
+    <Compile Include="ShopItemList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
